# wkTools

./: .gitignore  README.md  cmd.txt  index.html  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.js
.github/workflows/: release.yml
data/: database.db
database/: database copy.db  database.db  database.db-shm  database.db-wal
public/: splashscreen.html
src/: App.vue  main.js  style.scss  styleDark.scss
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/__data/database/: db_blank.db
src-tauri/__data/sql/: regent.sql  regent_group.sql  sys_dict_data.sql  sys_dict_type.sql
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yml  zh.yml
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/apis/: dm_hospital.rs  dm_instrument.rs  dm_mc_sample.rs  dm_mc_sample_result.rs  dm_mc_sample_statistics.rs  mod.rs  regent.rs  regent_group.rs  sys_dict_data.rs  sys_dict_type.rs
src-tauri/src/app/services/: dm_hospital.rs  dm_instrument.rs  dm_mc_sample.rs  dm_mc_sample_result.rs  dm_mc_sample_statistics.rs  mod.rs  regent.rs  regent_group.rs  sys_dict_data.rs  sys_dict_type.rs
src-tauri/src/database/: common.rs  mod.rs
src-tauri/src/database/entities/: dm_hospital.rs  dm_instrument.rs  dm_mc_sample.rs  dm_mc_sample_result.rs  mod.rs  prelude.rs  regent.rs  regent_group.rs  sys_dict_data.rs  sys_dict_type.rs
src-tauri/src/database/models/: dm_hospital.rs  dm_instrument.rs  dm_mc_sample.rs  dm_mc_sample_result.rs  dm_mc_sample_statistics.rs  regent.rs  regent_group.rs  sys_dict_data.rs  sys_dict_type.rs
src-tauri/src/tools/: comm_tools.rs  db.rs  exceltools.rs  imgtools.rs  mod.rs  msgs.rs  set_lang.rs
src-tauri/src/utils/: mod.rs  parse.rs  path.rs
src/components/: DictTag.vue  Pagination.vue  RightToolbar.vue  SideBar.vue  Updater.vue
src/locals/: index.js
src/locals/lang/: en.js  en.json  zh.js  zh.json
src/router/: index.js
src/store/: index.js
src/store/modules/: app.js
src/utils/: dataConvert.js  dict.js  excelUtils.js  utl.js
src/views/: about.vue  excel.vue  img.vue  index.vue  setting.vue
src/views/about/: index.vue
(+12 files in other folders)
