[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["lingdu"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }
# tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "dev", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "macos-private-api", "updater"] }
# tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev",features = ["api-all", "updater"] }
# 时间
chrono = "0.4.21"
# lazy
once_cell = "1"
# 图片处理
image = "0.24"
# 异步支持
tokio = {version = "1", features = ["rt-multi-thread", "macros", "parking_lot"] }
# async-std = "1"
# 本地化
rust-i18n = "0"
# 错误处理
anyhow = "1"
# 生成id
scru128 = "2"

# 
futures = "0.3"

# tracing-subscriber="0"
tracing="0"
#  log
tauri-plugin-log = {git="https://github.com/tauri-apps/tauri-plugin-log",features = ["colored"] }

[package.metadata.i18n]
available-locales = ["en", "zh"]
default-locale = "en"

# 数据库连接
# sea-orm
[dependencies.sea-orm]
default-features = false
features = ["macros", "runtime-tokio-rustls", "with-json","debug-print","with-rust_decimal"]
version = "0.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol","sqlite" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
sqlite = ["sea-orm/sqlx-sqlite"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true
